# fitness-club

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yaml
migrations/: 20241218172400_initial.sql  20241219025627_data.sql
src/: error.rs  lib.rs  main.rs
src/auth/: claims.rs  mod.rs  password_hash.rs  user.rs
src/db/: connect.rs  membership.rs  mod.rs  users.rs
src/models/: auth.rs  location.rs  member.rs  mod.rs  notification.rs  staff.rs  tool.rs  user.rs
src/server/: auth.rs  mod.rs  serve.rs
src/server/routes/: mod.rs  serve_static.rs
src/server/routes/api/: auth.rs  membership.rs  mod.rs  user.rs
static/: dashboard.html  empty.html  index.html  login.html  membership.html  profile.html  register.html
static/css/: main.css
static/membership/: new.html
static/scripts/: api.js
