[package]
name = "fitness-club"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
anyhow = "1.0.94"
argon2 = "0.5.3"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["chrono", "uuid", "postgres", "runtime-tokio"] }
thiserror = "2.0.8"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
